--- a/teleport-admin/src/main/resources/common.properties
+++ b/teleport-admin/src/main/resources/common.properties
@@ -17,11 +17,12 @@ teleport.jdbc.initialPoolSize=1
 teleport.jdbc.minPoolSize=2
 teleport.jdbc.maxPoolSize=50
 
-teleport.jdbc.url=
-teleport.jdbc.username=
-teleport.jdbc.password=
 
-teleport.mongo.ordertraceinfo.address=
-teleport.mongo.ordertraceinfo.username=
-teleport.mongo.ordertraceinfo.password=
-teleport.mongo.ordertraceinfo.database=
+teleport.jdbc.url=jdbc:mysql://192.168.153.36:3306/pop_customs
+teleport.jdbc.username=popdelivery
+teleport.jdbc.password=popdelivery
+
+teleport.mongo.ordertraceinfo.address=192.168.153.32:20012
+teleport.mongo.ordertraceinfo.username=poporder_mongo_rw
+teleport.mongo.ordertraceinfo.password=poporder_mongo_pwd
+teleport.mongo.ordertraceinfo.database=poporder_mongo
