--- a/teleport-persistent/pom.xml
+++ b/teleport-persistent/pom.xml
@@ -21,6 +21,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.sprintdragon</groupId>
+            <artifactId>teleport-jpa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
         </dependency>
