--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <mongo.version>2.14.3</mongo.version>
         <ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
         <mysql-connector-java.version>5.1.5</mysql-connector-java.version>
-        <druid.version>1.0.16.jd.1</druid.version>
+        <druid.version>1.0.25</druid.version>
 
         <spring-data-elasticsearch.version>1.0.0.RELEASE</spring-data-elasticsearch.version>
     </properties>
