--- a/teleport-admin/src/main/resources/common.properties
+++ b/teleport-admin/src/main/resources/common.properties
@@ -18,11 +18,11 @@ teleport.jdbc.minPoolSize=2
 teleport.jdbc.maxPoolSize=50
 
 
-teleport.jdbc.url=jdbc:mysql://192.168.153.36:3306/pop_customs
-teleport.jdbc.username=popdelivery
-teleport.jdbc.password=popdelivery
+teleport.jdbc.url=jdbc:mysql://192.168.153.36:3306/xxx
+teleport.jdbc.username=xxx
+teleport.jdbc.password=xxx
 
-teleport.mongo.ordertraceinfo.address=192.168.153.32:20012
-teleport.mongo.ordertraceinfo.username=poporder_mongo_rw
-teleport.mongo.ordertraceinfo.password=poporder_mongo_pwd
-teleport.mongo.ordertraceinfo.database=poporder_mongo
+teleport.mongo.ordertraceinfo.address=192.168.153.1:20012
+teleport.mongo.ordertraceinfo.username=mongo_rw
+teleport.mongo.ordertraceinfo.password=mongo_pwd
+teleport.mongo.ordertraceinfo.database=mongo
